--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "angular": "~1.4.8",
     "satellizer": "~0.13.1",
     "angular-ui-router": "~0.2.15",
-    "angular-material": "~1.0.0"
+    "angular-material": "~1.0.0",
+    "ngstorage": "~0.3.10",
+    "lodash": "~3.10.1"
   }
 }
