--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,7 @@
     "angular-ui-router": "~0.2.15",
     "angular-material": "~1.0.0",
     "ngstorage": "~0.3.10",
-    "lodash": "~3.10.1"
+    "lodash": "~3.10.1",
+    "angular-material-data-table": "~0.9.7"
   }
 }
