--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-inject": "^3.0.0",
     "gulp-livereload": "^3.8.1",
+    "gulp-notify": "^2.2.0",
     "gulp-webserver": "^0.9.1",
     "wiredep": "^2.2.2"
   }
